--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,7 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 keras==2.11.0
+keras-metrics==1.1.0
 kiwisolver==1.4.4
 langcodes==3.3.0
 libclang==15.0.6.1
