--- a/requirements.txt
+++ b/requirements.txt
@@ -160,6 +160,7 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.10.5
 pyDeprecate==0.3.2
+pydot==1.4.2
 Pygments==2.14.0
 pyparsing==3.0.9
 pyrsistent==0.19.3
