--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==1.4.0
 accelerate==0.16.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+ansi2html==1.8.0
 antlr4-python3-runtime==4.9.3
 anyio==3.6.2
 appnope==0.1.3
@@ -12,7 +13,6 @@ asttokens==2.2.1
 astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.2.0
-autogluon==0.7.0
 autogluon.common==0.7.0
 autogluon.core==0.7.0
 autogluon.features==0.7.0
@@ -28,6 +28,7 @@ botocore==1.29.80
 cachetools==5.3.0
 catalogue==2.0.8
 catboost==1.1.1
+category-encoders==2.6.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
@@ -40,11 +41,16 @@ contourpy==1.0.7
 cycler==0.11.0
 cymem==2.0.7
 Cython==0.29.33
+dash==2.9.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 datasets==2.10.0
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.13
+deprecation==2.1.0
 dill==0.3.6
 distlib==0.3.6
 evaluate==0.3.0
@@ -56,6 +62,7 @@ fastdownload==0.0.7
 fastjsonschema==2.16.2
 fastprogress==1.0.3
 filelock==3.9.0
+Flask==2.2.3
 flatbuffers==23.3.3
 fonttools==4.38.0
 fqdn==1.5.1
@@ -75,12 +82,14 @@ huggingface-hub==0.12.1
 hyperopt==0.2.7
 idna==3.4
 imageio==2.26.0
+imbalanced-learn==0.10.1
 importlib-metadata==6.0.0
 ipykernel==6.21.2
 ipython==8.10.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.4
 isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -89,6 +98,7 @@ jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-console==6.4.4
+jupyter-dash==0.4.2
 jupyter-events==0.6.3
 jupyter_client==8.0.3
 jupyter_core==5.2.0
@@ -96,9 +106,13 @@ jupyter_server==2.1.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
+kaleido==0.2.1
 keras==2.11.0
 keras-metrics==1.1.0
+keras-nlp==0.4.1
+keras-tuner @ git+https://github.com/keras-team/keras-tuner.git@8e5c205e381a802f25af40be013bb44d37726326
 kiwisolver==1.4.4
+kt-legacy==1.0.4
 langcodes==3.3.0
 libclang==15.0.6.1
 lightgbm==3.3.5
@@ -134,6 +148,7 @@ omegaconf==2.2.3
 openmim==0.3.6
 opt-einsum==3.3.0
 ordered-set==4.1.0
+orjson==3.8.8
 packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
@@ -145,6 +160,7 @@ pickleshare==0.7.5
 Pillow==9.4.0
 platformdirs==2.6.2
 plotly==5.13.1
+plotly-resampler==0.8.3.2
 pmdarima==1.8.5
 preshed==3.0.8
 prometheus-client==0.16.0
@@ -161,7 +177,10 @@ pycparser==2.21
 pydantic==1.10.5
 pyDeprecate==0.3.2
 pydot==1.4.2
+pydot-ng==2.0.0
+pydotplus==2.0.2
 Pygments==2.14.0
+pyod==1.0.9
 pyparsing==3.0.9
 pyrsistent==0.19.3
 PySocks==1.7.1
@@ -181,20 +200,24 @@ regex==2022.10.31
 requests==2.28.2
 requests-oauthlib==1.3.1
 responses==0.18.0
+retrying==1.3.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.3.1
 rsa==4.9
 s3transfer==0.6.0
+scapy==2.5.0
+schemdraw==0.15
 scikit-image==0.19.3
 scikit-learn==1.2.1
+scikit-plot==0.3.7
 scipy==1.10.0
 seaborn==0.12.2
 Send2Trash==1.8.0
 sentencepiece==0.1.97
 seqeval==1.2.2
 six==1.16.0
-sktime==0.15.1
+sktime==0.16.1
 smart-open==6.3.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
@@ -230,6 +253,7 @@ torchmetrics==0.8.2
 torchvision==0.14.1
 tornado==6.2
 tqdm==4.64.1
+trace-updater==0.0.9
 traitlets==5.9.0
 transformers==4.26.1
 typer==0.7.0
@@ -246,7 +270,9 @@ websocket-client==1.5.0
 Werkzeug==2.2.3
 widgetsnbextension==4.0.5
 wrapt==1.15.0
+wurlitzer==3.0.3
 xgboost==1.7.4
 xxhash==3.2.0
 yarl==1.8.2
+yellowbrick==1.5
 zipp==3.12.0
